26 March 2009
+ Authorization scripts now have default group assignments. New
  members will assigned to a group based on their authorization
  method.
+ Removed default group by user or admin from settings.
+ Added ability to view users by whether or not they are in a
  particular group.
+ Updated:
  templates/forms/authorization.tpl
  templates/forms/settings.tpl
  templates/manager/users.tpl

23 March 2009
+ Added pager caching to group listing

10 March 2009
+ Display name may now not be the same as a user name
+ Extended user name error to include display name
+ Added password check to ldap script

Version 2.6.2
-----------------------------------------------------------------------
9 February 2009
+ Moved error file to inc/
+ Blank passwords forbidden.

28 January 2009
+ Error check added to cosign authorization.

27 January 2009
+ php fiveasized the classes.
+ Added some needed error logging to user creation problems
+ Added ability for default user groups to be set for admin created
  and newly joined users.
+ Fixed testing on addMembers. Previous code was nonsensical.
+ _user_group id gets set upon a user object save.
+ Updated: templates/forms/settings.tpl

Version 2.6.1
-----------------------------------------------------------------------
11 December 2008
+ requireLogin now reroutes dependant on the user authorization
+ If the user's group is missing when they are updated, a new one is
  properly created. Prior to the fix, a new group was created without an
  assigned user id.
+ Added error message to my page if update goes bad.

Version 2.6.0
-----------------------------------------------------------------------
17 November 2008
+ Fixed user installation in German. Special thanks to Hilmar for
pointing this out.

14 November 2008
+ Site contact copied from hub

5 November 2008
+ Fixed delete link.
+ Current_User - Added "secured" function to Current_User. Works like
  authorized but uses salted urls.

31 October 2008